--- a/mk2.html
+++ b/mk2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mara Khao</title>
+    <title>MK2</title>
 </head>
 <body>
-    <h1>Here We Go</h1>
+    <h1>Here We Go Again</h1>
 </body>
 </html>
